# ragchain

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.demo  README.md  demo-compose.yml  docker-compose.yml  main.py  pyproject.toml  test-compose.yml
.github/workflows/: ci.yml
scripts/: demo_runner.py
src/ragchain/: __init__.py  api.py  cli.py  config.py  graph.py  loaders.py  rag.py  router.py  utils.py
src/ragchain/parser/: __init__.py  html_parser.py  wiki_client.py
src/ragchain/rag/: __init__.py  chunker.py  embeddings.py  generation.py  ingest.py
src/ragchain/vectorstore/: chroma_vectorstore.py
tests/: conftest.py
tests/api/: test_api.py  test_ask_endpoint.py
tests/integration/: test_full_pipeline.py  test_real_embeddings.py
tests/unit/: test_api.py  test_chroma_vectorstore.py  test_chunker.py  test_chunker_edge_cases.py  test_cli.py  test_cli_edge_cases.py  test_config.py  test_embeddings.py  test_graph.py  test_html_parser.py  test_loaders.py  test_rag.py  test_utils.py  test_vectorstore_edge_cases.py  test_wiki_client.py
